# R-TYPE

./: CMakeLists.txt  Doxyfile  README.md  ServerList.txt  build.sh  tmp.plist  vcpkg.json  windows_move.sh
POC/: CMakeLists.txt
POC/src/: gameEnums.hpp  main.cpp
POC/src/AssetManager/: AssetManager.cpp  AssetManager.hpp
POC/src/ECS/: Entity.hpp  EntityManager.cpp  EntityManager.hpp  System.cpp  System.hpp
POC/src/ECS/Entity/: Button.hpp  Ennemy.hpp  Life.hpp  LifeBar.hpp  Player.hpp  Progress.hpp  Sound.hpp  Sprite.hpp  Text.hpp
POC/src/Game/: Window.cpp  Window.hpp
POC/src/Game/GamePlay/: GameGetEvents.cpp  GameLogic.cpp  GamePlay.cpp  GamePlay.hpp
Template/: README.md  Window.cpp  Window.hpp
doc/: R-type.drawio
server/: BitHandler.cpp  CMakeLists.txt  README.md  a.out  createEnemies.cpp  multipleServers.hpp  server.cpp  server.hpp  serverThreads.cpp  serverTools.cpp
src/: ISafeQueue.hpp  README.md  SafeQueue.hpp  safeVariable.hpp
src/AssetManager/: AssetManager.cpp  AssetManager.hpp
src/Client/: Client.cpp  Client.hpp  README.md
src/ECS/: Component.hpp  EntityManager.hpp  IComponent.hpp
src/ECS/Entity/: Bonus.hpp  Button.hpp  Ennemy.hpp  FinalBoss.hpp  InputKey.hpp  LobbyBoard.hpp  ParallaxScrolling.hpp  Progress.hpp  SemiBoss.hpp  ServerBox.hpp  Sound.hpp  SpaceShip.hpp  Sprite.hpp  Text.hpp  WaitingSprite.hpp  consoleInGame.hpp
src/Game/: Window.cpp  Window.hpp  main.cpp
src/Game/EndScreen/: End.cpp  End.hpp
src/Game/GamePlay/: GameCollision.cpp  GameGetEvents.cpp  GameLogic.cpp  GamePlay.cpp  GamePlay.hpp
src/Game/Menu/: CreateServer.cpp  Init.cpp  JoinServer.cpp  Menu.cpp  Menu.hpp  MultiPlayer.cpp  SinglePlayer.cpp
